--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <div class="logo"><img src="/img/bikcraft.svg" alt="" /></div>
+      <div class="logo"><img src="img/bikcraft.svg" alt="" /></div>
     </header>
     <nav class="menu">
       <a href="#">Sobre</a>
@@ -28,25 +28,25 @@
         </p>
         <a class="btn-red" href="#">Ver mais</a>
       </div>
-      <img src="/img/bicicleta.jpg" alt="Bike preta" />
+      <img src="img/bicicleta.jpg" alt="Bike preta" />
 
         <h2 class="sub">Vantagens Bikcraft</h1>
       
       <div class="especificacao">
         <div class="vantagem-espec">
-          <img src="/img/eletrica.svg" alt="icon bike" />
+          <img src="img/eletrica.svg" alt="icon bike" />
           <h3>Motor Elétrico</h3>
         <p>Permite você viajar distâncias inimaginaveis com a sua bike</p>
       </div>
 
         <div class="vantagem-espec">
-          <img src="/img/velocidade.svg" alt="icon velocidade" />
+          <img src="img/velocidade.svg" alt="icon velocidade" />
           <h3>40 km/h</h3>
           <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
         </div>
 
         <div class="vantagem-espec">
-          <img src="/img/rastreador.svg" alt="" />
+          <img src="img/rastreador.svg" alt="" />
           <h3>Rastreador</h3>
           <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
         </div>
