--- a/index.html
+++ b/index.html
@@ -18,43 +18,44 @@
       <a href="#">Contato</a>
     </nav>
     
-    <div class="container">
-      <div class="intro">
-        <span class="barrinha"></span>
+    <article class="container">
+      <section class="intro">
         <h1>Bicicletas feitas a mão</h1>
         <p>
           A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
           vem equipada com os melhores acessórios da marca.
         </p>
         <a class="btn-red" href="#">Ver mais</a>
-      </div>
+      </section>
       <img src="/img/bicicleta.jpg" alt="Bike preta" />
 
         <h2 class="sub">Vantagens Bikcraft</h1>
       
-      <div class="especificacao">
-        <div class="vantagem-espec">
+      <ul class="especificacao">
+        <li class="vantagem-espec">
           <img src="/img/eletrica.svg" alt="icon bike" />
           <h3>Motor Elétrico</h3>
-        <p>Permite você viajar distâncias inimaginaveis com a sua bike</p>
-      </div>
-
-        <div class="vantagem-espec">
+          <p>Permite você viajar distâncias inimaginaveis com a sua bike</p>
+        </li>
+        <li class="vantagem-espec">
           <img src="/img/velocidade.svg" alt="icon velocidade" />
           <h3>40 km/h</h3>
           <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-        </div>
+        </li>
 
-        <div class="vantagem-espec">
+        <li class="vantagem-espec">
           <img src="/img/rastreador.svg" alt="" />
           <h3>Rastreador</h3>
           <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-        </div>
-      </div>
-    </div>
+        </li>
+      </ul>
 
-    <div class="rodape">
+
+      </section>
+    </article>
+
+    <footer class="rodape">
       <p>Bikcraft. Alguns Direitos Reservados.</p>
-    </div>
+    </footer>
   </body>
 </html>
