--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
     <title>Bikcraft</title>
   </head>
   <body>
-    <header>
-      <div class="logo"><img src="/img/bikcraft.svg" alt="" /></div>
-    </header>
-    <nav class="menu">
-      <a href="#">Sobre</a>
-      <a href="#">Produtos</a>
-      <a href="#">Lojas</a>
-      <a href="#">Contato</a>
-    </nav>
+
+    <header class="header">
+      <img src="/img/bikcraft.svg" alt="Bikcraft" />
     
-    <article class="container">
+    <nav aria-label="primária">
+      <ul class="menu" >
+        <li><a href="/">Sobre</a></li>
+        <li><a href="/">Produtos</a></li>
+        <li><a href="/">Lojas</a></li>
+        <li><a href="/">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+
+    <main class="container">
       <section class="intro">
         <h1>Bicicletas feitas a mão</h1>
         <p>
@@ -53,7 +57,7 @@
 
 
       </section>
-    </article>
+    </main>
 
     <footer class="rodape">
       <p>Bikcraft. Alguns Direitos Reservados.</p>
