--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main class="container">
       <section class="intro">
-        <h1>Bicicletas feitas a mão</h1>
+        <h1>Bicicletas Feitas a Mão</h1>
         <p>
           A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
           vem equipada com os melhores acessórios da marca.
