--- a/index.html
+++ b/index.html
@@ -22,25 +22,28 @@
     </nav>
   </header>
 
-    <main class="container">
-      <section class="intro">
+    <main>
+      <article class="container" aria-labelledby="label-introducao">
+        <div class="intro">
         <h1>Bicicletas Feitas a Mão</h1>
         <p>
           A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
           vem equipada com os melhores acessórios da marca.
         </p>
         <a class="btn-red" href="#">Ver mais</a>
-      </section>
-      
+      </div>
+      <div class="intro-img">
       <img src="img/bicicleta.jpg" alt="Bike preta" />
-
-        <h2 class="sub">Vantagens Bikcraft</h1>
+     </div>
+      </article>
       
-      <ul class="especificacao">
-        <li class="vantagem-espec">
-          <img src="img/eletrica.svg" alt="icon bike" />
-          <h3>Motor Elétrico</h3>
-          <p>Permite você viajar distâncias inimaginaveis com a sua bike</p>
+      <article class="container conteudo-vantagem" aria-labelledby="label-vantagens">
+        <h2 class="sub" id="label-vantagens">Vantagens Bikcraft</h1>
+        <ul class="vantagens">
+          <li class="vantagem-espec">
+            <img src="img/eletrica.svg" alt="icon bike" />
+            <h3>Motor Elétrico</h3>
+            <p>Permite você viajar distâncias inimaginaveis com a sua bike</p>
         </li>
         <li class="vantagem-espec">
           <img src="img/velocidade.svg" alt="icon velocidade" />
@@ -54,9 +57,7 @@
           <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
         </li>
       </ul>
-
-
-      </section>
+     </article>
     </main>
 
     <footer class="rodape">
